@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-21T08:14:30Z",
+  "timestamp" : "2023-10-21T16:14:41Z",
   "count_outdated" : 3075,
   "uniques_outdated" : 1257,
-  "count" : 3244,
+  "count" : 3245,
   "uniques" : 1347,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
