@@ -1,5 +1,5 @@
 {
-  "count": 169,
+  "count": 170,
   "uniques": 62,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
