@@ -1,3 +1,12 @@
+2023-10-21T16:14:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6598395774 # 2008
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
+* notice: last 14d: unq all: 62 170
+* notice: prev accum: outdated-unq outdated-all / unq all: 1257 3075 / 1347 3244
+* notice: next accum: outdated-unq outdated-all / unq all: 1257 3075 / 1347 3245
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-10-21]
+
 2023-10-21T08:14:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6596221405 # 2007
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
